<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="240dp"
    android:background="@drawable/and_bkg_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/and_btn"
            android:text="@string/btn_close"
            android:textColor="@color/text"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView04"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/stt_no"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView03"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/stt_name"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView02"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/stt_level"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView01"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/stt_score"
            android:textColor="@color/text"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_weight="1" >
    </ListView>

</LinearLayout>