<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/and_bkg_menu"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_other_apps"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/bt_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/and_btn"
            android:text="@string/btn_other_app"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_rate_me"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/bt_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/and_btn"
            android:text="@string/btn_rate"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_ranking"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/bt_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/and_btn"
            android:text="@string/btn_ranking"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_instruction"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/bt_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/and_btn"
            android:text="@string/btn_instruction"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_sound"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/bt_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/and_btn"
            android:text="@string/stt_off"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_quit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/bt_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/and_btn"
            android:text="@string/btn_quit"
            android:textColor="@color/text"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >

            <ImageView
                android:id="@+id/iv_miner"
                android:layout_width="230dp"
                android:layout_height="270dp"
                android:contentDescription="@drawable/and_miner"
                android:src="@drawable/and_miner" />

            <Button
                android:id="@+id/bt_start"
                android:layout_width="135dp"
                android:layout_height="140dp"
                android:background="@drawable/and_btn_start" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@drawable/and_bkg_dialog"
            android:orientation="vertical"
            android:visibility="invisible" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tv_names"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tv_scores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_score"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>